--- a/src/public/clients/index.html
+++ b/src/public/clients/index.html
@@ -1,97 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Codlinx - Clientes</title>
 
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-            crossorigin="anonymous"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Codlinx - Clientes</title>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"
-        ></script>
-    </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <body>
-        <nav class="navbar bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="/dashboard">
-                    <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
-                </a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <nav class="navbar bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/dashboard">
+                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+            </a>
+        </div>
+    </nav>
+
+    <div class="container p-4" id="clients">
+        <div class="col">
+            <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+            <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+            <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+            <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
+        </div>
+
+        <hr />
+
+        <div class="d-flex flex-wrap justify-content-between">
+            <div class="w-80">
+                <h5>Clientes</h5>
             </div>
-        </nav>
-
-        <div class="container p-4" id="clients">
-            <div class="col">
-                <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-                <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-                <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-            </div>
-
-            <hr />
-
-            <div class="d-flex flex-wrap justify-content-between">
-                <div class="w-80">
-                    <h5>Clientes</h5>
-                </div>
-                <div class="w-15">
-                    <a class="btn btn-dark btn-block w-100 mb-1" href="../clients/i.html">Novo cliente</a>
-                    <input
-                        type="search"
-                        class="form-control"
-                        placeholder="Pesquisar"
-                        v-model="q"
-                        v-on:keyup="handlerSearch"
-                    />
-                </div>
-            </div>
-
-            <div class="table-responsive m-2">
-                <table class="table table-striped border">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nome</th>
-                            <th scope="col">Abrir</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="client of clients">
-                            <th scope="row">{{client.id}}</th>
-                            <td>{{client.name}}</td>
-                            <td>
-                                <a :href="'../clients/i?id='+client.id"><i class="fa-solid fa-arrow-right"></i></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="w-15">
+                <a class="btn btn-dark btn-block w-100 mb-1" href="../clients/i.html">Novo cliente</a>
+                <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
+                    v-on:keyup="handlerSearch" />
             </div>
         </div>
 
-        <script src="../assets/js/axios.min.js"></script>
-        <script src="../assets/js/vue.min.js"></script>
-        <script src="../assets/js/clients/clients.js"></script>
-    </body>
+        <div class="table-responsive m-2">
+            <table class="table table-striped border">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Abrir</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="client of clients">
+                        <th scope="row">{{client.id}}</th>
+                        <td>{{client.name}}</td>
+                        <td>
+                            <a :href="'../clients/i?id='+client.id"><i class="fa-solid fa-arrow-right"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="../assets/js/axios.min.js"></script>
+    <script src="../assets/js/vue.min.js"></script>
+    <script src="../assets/js/clients/clients.js"></script>
+</body>
+
 </html>
