--- a/src/public/products/i.html
+++ b/src/public/products/i.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codlinx - Os</title>
+    <title>Codlinx - Produto</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
@@ -30,7 +32,7 @@
         </div>
     </nav>
 
-    <div class="container p-4" id="service_orders">
+    <div class="container p-4" id="product">
         <div class="col">
             <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
             <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
@@ -40,44 +42,30 @@
 
         <hr />
 
-        <div class="d-flex flex-wrap justify-content-between">
-            <div class="w-80">
-                <h5>Ordens de serviço</h5>
-            </div>
-            <div class="w-15">
-                <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
-                    v-on:keyup="handlerSearch" />
-            </div>
+        <div class="d-flex justify-content-between">
+            <h5>Produto #{{id}}</h5>
         </div>
 
-        <div class="table-responsive m-2">
-            <table class="table table-striped border">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Assunto</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Abrir</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="service_order of service_orders">
-                        <th scope="row">{{service_order.id}}</th>
-                        <td>{{service_order.subject}}</td>
-                        <td>{{service_order.status}}</td>
-                        <td>
-                            <a :href="'../service_orders/i?id='+service_order.id"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <form v-on:submit="handlerSubmit">
+            <div class="row">
+                <div class="mb-3 col-lg">
+                    <label for="description" class="form-label">Descrição:</label>
+                    <input type="text" class="form-control" v-model="description" id="description" />
+                </div>
+
+                <div class="mb-3 col-lg">
+                    <label for="value" class="form-label">Valor:</label>
+                    <input type="number" class="form-control" v-model="value" id="value" />
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-dark">Enviar</button>
+        </form>
     </div>
 
     <script src="../assets/js/axios.min.js"></script>
     <script src="../assets/js/vue.min.js"></script>
-    <script src="../assets/js/service_orders/service_orders.js"></script>
+    <script src="../assets/js/products/i.js"></script>
 </body>
 
 </html>
