--- a/src/public/products/index.html
+++ b/src/public/products/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codlinx - Os</title>
+    <title>Codlinx - Produtos</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
@@ -30,7 +30,7 @@
         </div>
     </nav>
 
-    <div class="container p-4" id="service_orders">
+    <div class="container p-4" id="products">
         <div class="col">
             <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
             <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
@@ -42,7 +42,7 @@
 
         <div class="d-flex flex-wrap justify-content-between">
             <div class="w-80">
-                <h5>Ordens de serviço</h5>
+                <h5>Produtos</h5>
             </div>
             <div class="w-15">
                 <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
@@ -55,19 +55,18 @@
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Assunto</th>
-                        <th scope="col">Status</th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col">Valor</th>
                         <th scope="col">Abrir</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr v-for="service_order of service_orders">
-                        <th scope="row">{{service_order.id}}</th>
-                        <td>{{service_order.subject}}</td>
-                        <td>{{service_order.status}}</td>
+                    <tr v-for="product of products">
+                        <th scope="row">{{product.id}}</th>
+                        <td>{{product.description}}</td>
+                        <td>{{product.value.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'})}}</td>
                         <td>
-                            <a :href="'../service_orders/i?id='+service_order.id"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
+                            <a :href="'../products/i?id='+product.id"><i class="fa-solid fa-arrow-right"></i></a>
                         </td>
                     </tr>
                 </tbody>
@@ -77,7 +76,7 @@
 
     <script src="../assets/js/axios.min.js"></script>
     <script src="../assets/js/vue.min.js"></script>
-    <script src="../assets/js/service_orders/service_orders.js"></script>
+    <script src="../assets/js/products/products.js"></script>
 </body>
 
 </html>
