feat (produto): Cadastro

--- a/src/public/products/index.html
+++ b/src/public/products/index.html
@@ -45,6 +45,7 @@
                 <h5>Produtos</h5>
             </div>
             <div class="w-15">
+                <a class="btn btn-dark btn-block w-100 mb-1" href="../products/i.html">Novo produto</a>
                 <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
                     v-on:keyup="handlerSearch" />
             </div>
