--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -57,6 +57,8 @@
                         <th scope="col">#</th>
                         <th scope="col">Assunto</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Projeto</th>
+                        <th scope="col">Cliente</th>
                         <th scope="col">Abrir</th>
                     </tr>
                 </thead>
@@ -65,6 +67,16 @@
                         <th scope="row">{{service_order.id}}</th>
                         <td>{{service_order.subject}}</td>
                         <td>{{service_order.status}}</td>
+                        <td>
+                            <a :href="'../projects/i?id='+service_order.Project.id">
+                                {{service_order.Project.name}}
+                            </a>
+                        </td>
+                        <td>
+                            <a :href="'../clients/i?id='+service_order.Project.Client.id">
+                                {{service_order.Project.Client.name}}
+                            </a>
+                        </td>
                         <td>
                             <a :href="'../service_orders/i?id='+service_order.id"><i
                                     class="fa-solid fa-arrow-right"></i></a>
