--- a/src/public/projects/index.html
+++ b/src/public/projects/index.html
@@ -57,6 +57,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Nome</th>
                         <th scope="col">Tipo</th>
+                        <th scope="col">Cliente</th>
                         <th scope="col">Abrir</th>
                     </tr>
                 </thead>
@@ -65,6 +66,9 @@
                         <th scope="row">{{project.id}}</th>
                         <td>{{project.name}}</td>
                         <td>{{project.type}}</td>
+                        <td>
+                            <a :href="'../clients/i?id='+project.Client.id">{{project.Client.name}}</a>
+                        </td>
                         <td>
                             <a :href="'../projects/i?id='+project.id"><i class="fa-solid fa-arrow-right"></i></a>
                         </td>
