--- a/src/public/clients/i.html
+++ b/src/public/clients/i.html
@@ -47,8 +47,23 @@
         <form v-on:submit="handlerSubmit">
             <div class="row">
                 <div class="mb-3 col">
-                    <label for="exampleInputEmail1" class="form-label">Nome</label>
-                    <input type="text" class="form-control" v-model="name" />
+                    <label for="inputName1" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="inputName1" v-model="name" />
+                </div>
+                <div class="mb-3 col">
+                    <label for="inputName2" class="form-label">Nome Social</label>
+                    <input type="text" class="form-control" id="inputName2" v-model="corporate_name" />
+                </div>
+                <div class="mb-3 col">
+                    <label for="inputDocument" class="form-label">Documento</label>
+                    <input type="text" class="form-control" id="inputDocument" v-model="document"
+                        v-on:keyup="maskDocument" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3 col">
+                    <label for="inputEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" v-model="email" />
                 </div>
             </div>
 
