--- a/src/public/servers/i.html
+++ b/src/public/servers/i.html
@@ -66,19 +66,19 @@
                 <div class="row">
                     <div class="mb-3 col-lg-6">
                         <label for="description" class="form-label">Descrição:</label>
-                        <input type="text" class="form-control" v-model="description" id="description" />
+                        <input type="text" class="form-control" v-model="description" id="description" required />
                     </div>
 
                     <div class="mb-3 col-lg">
                         <label for="provider" class="form-label">Provedor:</label>
-                        <input type="text" class="form-control" v-model="provider" id="provider" />
+                        <input type="text" class="form-control" v-model="provider" id="provider" required />
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="mb-3 col-lg">
                         <label for="host" class="form-label">Host:</label>
-                        <input type="text" class="form-control" v-model="host" id="host" />
+                        <input type="text" class="form-control" v-model="host" id="host" required />
                     </div>
 
                     <div class="mb-3 col-lg">
