--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -1,100 +1,147 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Codlinx - Dashboard</title>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codlinx - Dashboard</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"
+        ></script>
+    </head>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
-</head>
+    <body>
+        <nav class="navbar bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="/dashboard">
+                    <img src="./assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+                </a>
+            </div>
+        </nav>
 
-<body>
-    <nav class="navbar bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/dashboard">
-                <img src="./assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
-            </a>
-        </div>
-    </nav>
+        <div class="container p-4" id="dashboard">
+            <div class="col">
+                <a href="/clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+                <a href="/projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+                <a href="/service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+                <a href="/servers" class="btn btn-dark btn-sm my-2">Servidores</a>
+                <a href="/products" class="btn btn-dark btn-sm my-2">Produtos</a>
+            </div>
 
-    <div class="container p-4" id="dashboard">
-        <div class="col">
-            <a href="/clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-            <a href="/projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-            <a href="/service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-            <a href="/products" class="btn btn-dark btn-sm my-2">Produtos</a>
-        </div>
+            <hr />
 
-        <hr />
-
-        <div class="row" style="gap: 10px">
-            <div class="col border rounded p-2" v-if="currentOs || recentsOs.length > 0">
-                <div class="row" v-if="currentOs">
-                    <h5>Os - Em correções</h5>
-                    <div class="table-responsive">
-                        <table class="table table-striped border">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Assunto</th>
-                                    <th scope="col">Projeto</th>
-                                    <th scope="col">Cliente</th>
-                                    <th scope="col">Abrir</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">{{currentOs.id}}</th>
-                                    <td>{{currentOs.subject}}</td>
-                                    <td>
-                                        <a :href="'/projects/i?id='+currentOs.Project.id">{{currentOs.Project.name}}</a>
-                                    </td>
-                                    <td>
-                                        <a
-                                            :href="'/clients/i?id='+currentOs.Project.Client.id">{{currentOs.Project.Client.name}}</a>
-                                    </td>
-                                    <td>
-                                        <a :href="'/service_orders/i?id='+currentOs.id"><i
-                                                class="fa-solid fa-arrow-right"></i></a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+            <div class="row" style="gap: 10px">
+                <div class="col border rounded p-2" v-if="currentOs || recentsOs.length > 0">
+                    <div class="row" v-if="currentOs">
+                        <h5>Os - Em correções</h5>
+                        <div class="table-responsive">
+                            <table class="table table-striped border">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Assunto</th>
+                                        <th scope="col">Projeto</th>
+                                        <th scope="col">Cliente</th>
+                                        <th scope="col">Abrir</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">{{currentOs.id}}</th>
+                                        <td>{{currentOs.subject}}</td>
+                                        <td>
+                                            <a :href="'/projects/i?id='+currentOs.Project.id"
+                                                >{{currentOs.Project.name}}</a
+                                            >
+                                        </td>
+                                        <td>
+                                            <a :href="'/clients/i?id='+currentOs.Project.Client.id"
+                                                >{{currentOs.Project.Client.name}}</a
+                                            >
+                                        </td>
+                                        <td>
+                                            <a :href="'/service_orders/i?id='+currentOs.id"
+                                                ><i class="fa-solid fa-arrow-right"></i
+                                            ></a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="row" v-if="recentsOs.length > 0">
+                        <h5>Os - Criados recentemente</h5>
+                        <div class="table-responsive">
+                            <table class="table table-striped border">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Assunto</th>
+                                        <th scope="col">Status</th>
+                                        <th scope="col">Abrir</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr v-for="os of recentsOs">
+                                        <th scope="row">{{os.id}}</th>
+                                        <td>{{os.subject}}</td>
+                                        <td>{{os.status}}</td>
+                                        <td>
+                                            <a :href="'/service_orders/i?id='+os.id"
+                                                ><i class="fa-solid fa-arrow-right"></i
+                                            ></a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
-                <div class="row" v-if="recentsOs.length > 0">
-                    <h5>Os - Criados recentemente</h5>
+                <div class="col border rounded p-2" v-if="fixedProjects.length > 0">
+                    <h5>Projetos - Fixados</h5>
                     <div class="table-responsive">
                         <table class="table table-striped border">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">Assunto</th>
-                                    <th scope="col">Status</th>
+                                    <th scope="col">Nome</th>
+                                    <th scope="col">Tipo</th>
                                     <th scope="col">Abrir</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr v-for="os of recentsOs">
-                                    <th scope="row">{{os.id}}</th>
-                                    <td>{{os.subject}}</td>
-                                    <td>{{os.status}}</td>
+                                <tr v-for="project of fixedProjects">
+                                    <th scope="row">{{project.id}}</th>
+                                    <td>{{project.name}}</td>
+                                    <td>{{project.type}}</td>
                                     <td>
-                                        <a :href="'/service_orders/i?id='+os.id"><i
-                                                class="fa-solid fa-arrow-right"></i></a>
+                                        <a :href="'/projects/i?id='+project.id"
+                                            ><i class="fa-solid fa-arrow-right"></i
+                                        ></a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -102,37 +149,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col border rounded p-2" v-if="fixedProjects.length > 0">
-                <h5>Projetos - Fixados</h5>
-                <div class="table-responsive">
-                    <table class="table table-striped border">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Nome</th>
-                                <th scope="col">Tipo</th>
-                                <th scope="col">Abrir</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="project of fixedProjects">
-                                <th scope="row">{{project.id}}</th>
-                                <td>{{project.name}}</td>
-                                <td>{{project.type}}</td>
-                                <td>
-                                    <a :href="'/projects/i?id='+project.id"><i class="fa-solid fa-arrow-right"></i></a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
         </div>
-    </div>
 
-    <script src="./assets/js/axios.min.js"></script>
-    <script src="./assets/js/vue.min.js"></script>
-    <script src="./assets/js/dashboard.js"></script>
-</body>
-
+        <script src="./assets/js/axios.min.js"></script>
+        <script src="./assets/js/vue.min.js"></script>
+        <script src="./assets/js/dashboard.js"></script>
+    </body>
 </html>
