--- a/src/public/products/index.html
+++ b/src/public/products/index.html
@@ -35,6 +35,7 @@
             <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
             <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
             <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+            <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
             <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
         </div>
 
