--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -1,96 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Codlinx - Os</title>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codlinx - Os</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"
+        ></script>
+    </head>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <nav class="navbar bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/dashboard">
-                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
-            </a>
-        </div>
-    </nav>
-
-    <div class="container p-4" id="service_orders">
-        <div class="col">
-            <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-            <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-            <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-            <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
-            <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
-        </div>
-
-        <hr />
-
-        <div class="d-flex flex-wrap justify-content-between">
-            <div class="w-80">
-                <h5>Ordens de serviço</h5>
+    <body>
+        <nav class="navbar bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="/dashboard">
+                    <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+                </a>
             </div>
-            <div class="w-15">
-                <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
-                    v-on:keyup="handlerSearch" />
+        </nav>
+
+        <div class="container p-4" id="service_orders">
+            <div class="col">
+                <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+                <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+                <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+                <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
+                <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
+            </div>
+
+            <hr />
+
+            <div class="d-flex flex-wrap justify-content-between">
+                <div class="w-80">
+                    <h5>Ordens de serviço</h5>
+                </div>
+                <div class="w-15">
+                    <input
+                        type="search"
+                        class="form-control"
+                        placeholder="Pesquisar"
+                        v-model="q"
+                        v-on:keyup="handlerSearch"
+                    />
+                </div>
+            </div>
+
+            <div class="table-responsive m-2">
+                <table class="table table-striped border">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Assunto</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Projeto</th>
+                            <th scope="col">Cliente</th>
+                            <th scope="col">Abrir</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="service_order of service_orders">
+                            <th scope="row">{{service_order.id}}</th>
+                            <td>{{service_order.subject}}</td>
+                            <td>{{service_order.status}}</td>
+                            <td>
+                                <a :href="'../projects/i?id='+service_order.Project?.id">
+                                    {{service_order.Project?.name}}
+                                </a>
+                            </td>
+                            <td v-if="service_order.ProjectId">
+                                <a :href="'../clients/i?id='+service_order.Project?.Client.id">
+                                    {{service_order.Project?.Client.name}}
+                                </a>
+                            </td>
+                            <td v-if="service_order.ClientId">
+                                <a :href="'../clients/i?id='+service_order.Client?.id">
+                                    {{service_order.Client?.name}}
+                                </a>
+                            </td>
+                            <td>
+                                <a :href="'../service_orders/i?id='+service_order.id"
+                                    ><i class="fa-solid fa-arrow-right"></i
+                                ></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
-        <div class="table-responsive m-2">
-            <table class="table table-striped border">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Assunto</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Projeto</th>
-                        <th scope="col">Cliente</th>
-                        <th scope="col">Abrir</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="service_order of service_orders">
-                        <th scope="row">{{service_order.id}}</th>
-                        <td>{{service_order.subject}}</td>
-                        <td>{{service_order.status}}</td>
-                        <td>
-                            <a :href="'../projects/i?id='+service_order.Project.id">
-                                {{service_order.Project.name}}
-                            </a>
-                        </td>
-                        <td>
-                            <a :href="'../clients/i?id='+service_order.Project.Client.id">
-                                {{service_order.Project.Client.name}}
-                            </a>
-                        </td>
-                        <td>
-                            <a :href="'../service_orders/i?id='+service_order.id"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <script src="../assets/js/axios.min.js"></script>
-    <script src="../assets/js/vue.min.js"></script>
-    <script src="../assets/js/service_orders/service_orders.js"></script>
-</body>
-
+        <script src="../assets/js/axios.min.js"></script>
+        <script src="../assets/js/vue.min.js"></script>
+        <script src="../assets/js/service_orders/service_orders.js"></script>
+    </body>
 </html>
