--- a/src/public/servers/index.html
+++ b/src/public/servers/index.html
@@ -59,7 +59,7 @@
                     <h5>Servidores</h5>
                 </div>
                 <div class="w-15">
-                    <a class="btn btn-dark btn-block w-100 mb-1" href="../servers/i.html">Novo produto</a>
+                    <a class="btn btn-dark btn-block w-100 mb-1" href="../servers/i.html">Novo servidor</a>
                     <input
                         type="search"
                         class="form-control"
