--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -100,7 +100,8 @@
                 </div>
 
                 <button type="submit" class="btn btn-dark">Enviar</button>
-
+                &bull;
+                <a class="btn btn-dark" :href="'/api/os/'+id+'/pdf'" download><i class="fa-solid fa-download"></i></a>
                 <hr />
             </form>
 
