feat (os): Orçamento e cancelado

--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -80,9 +80,11 @@
                         <select class="form-select" v-model="status" id="status">
                             <option disabled value="">Selecione uma opção</option>
                             <option value="Em avaliação">Em avaliação</option>
+                            <option value="Orçamento enviado">Orçamento enviado</option>
                             <option value="Em correções">Em correções</option>
                             <option value="Pendente">Pendente</option>
                             <option value="Finalizado">Finalizado</option>
+                            <option value="Cancelado">Cancelado</option>
                         </select>
                     </div>
                 </div>
